First fixed to avoid inline link flickering

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -485,6 +485,8 @@
         }
         .actions {
             margin: 8px 8px 0 -8px;
+            // min height to avoid flicker
+            min-height: 32px;
             & > li {
                 display: inline-block;
                 a {
